split proto files
