# server/proto/humidityStorage.pb.go
@@ -1,0 +1,239 @@
+// Code generated by protoc-gen-go. DO NOT EDIT.
+// versions:
+// 	protoc-gen-go v1.28.0
+// 	protoc        (unknown)
+// source: humidityStorage.proto
+
+package proto
+
+import (
+	protoreflect "google.golang.org/protobuf/reflect/protoreflect"
+	protoimpl "google.golang.org/protobuf/runtime/protoimpl"
+	reflect "reflect"
+	sync "sync"
+)
+
+const (
+	// Verify that this generated code is sufficiently up-to-date.
+	_ = protoimpl.EnforceVersion(20 - protoimpl.MinVersion)
+	// Verify that runtime/protoimpl is sufficiently up-to-date.
+	_ = protoimpl.EnforceVersion(protoimpl.MaxVersion - 20)
+)
+
+type StoreHumidityRequest struct {
+	state         protoimpl.MessageState
+	sizeCache     protoimpl.SizeCache
+	unknownFields protoimpl.UnknownFields
+
+	RequestNumber int32 `protobuf:"varint,1,opt,name=requestNumber,proto3" json:"requestNumber,omitempty"`
+	Humidity      int32 `protobuf:"varint,2,opt,name=humidity,proto3" json:"humidity,omitempty"`
+	DeviceId      int32 `protobuf:"varint,3,opt,name=deviceId,proto3" json:"deviceId,omitempty"`
+	SensorId      int32 `protobuf:"varint,4,opt,name=sensorId,proto3" json:"sensorId,omitempty"`
+}
+
+func (x *StoreHumidityRequest) Reset() {
+	*x = StoreHumidityRequest{}
+	if protoimpl.UnsafeEnabled {
+		mi := &file_humidityStorage_proto_msgTypes[0]
+		ms := protoimpl.X.MessageStateOf(protoimpl.Pointer(x))
+		ms.StoreMessageInfo(mi)
+	}
+}
+
+func (x *StoreHumidityRequest) String() string {
+	return protoimpl.X.MessageStringOf(x)
+}
+
+func (*StoreHumidityRequest) ProtoMessage() {}
+
+func (x *StoreHumidityRequest) ProtoReflect() protoreflect.Message {
+	mi := &file_humidityStorage_proto_msgTypes[0]
+	if protoimpl.UnsafeEnabled && x != nil {
+		ms := protoimpl.X.MessageStateOf(protoimpl.Pointer(x))
+		if ms.LoadMessageInfo() == nil {
+			ms.StoreMessageInfo(mi)
+		}
+		return ms
+	}
+	return mi.MessageOf(x)
+}
+
+// Deprecated: Use StoreHumidityRequest.ProtoReflect.Descriptor instead.
+func (*StoreHumidityRequest) Descriptor() ([]byte, []int) {
+	return file_humidityStorage_proto_rawDescGZIP(), []int{0}
+}
+
+func (x *StoreHumidityRequest) GetRequestNumber() int32 {
+	if x != nil {
+		return x.RequestNumber
+	}
+	return 0
+}
+
+func (x *StoreHumidityRequest) GetHumidity() int32 {
+	if x != nil {
+		return x.Humidity
+	}
+	return 0
+}
+
+func (x *StoreHumidityRequest) GetDeviceId() int32 {
+	if x != nil {
+		return x.DeviceId
+	}
+	return 0
+}
+
+func (x *StoreHumidityRequest) GetSensorId() int32 {
+	if x != nil {
+		return x.SensorId
+	}
+	return 0
+}
+
+type StoreHumidityReply struct {
+	state         protoimpl.MessageState
+	sizeCache     protoimpl.SizeCache
+	unknownFields protoimpl.UnknownFields
+}
+
+func (x *StoreHumidityReply) Reset() {
+	*x = StoreHumidityReply{}
+	if protoimpl.UnsafeEnabled {
+		mi := &file_humidityStorage_proto_msgTypes[1]
+		ms := protoimpl.X.MessageStateOf(protoimpl.Pointer(x))
+		ms.StoreMessageInfo(mi)
+	}
+}
+
+func (x *StoreHumidityReply) String() string {
+	return protoimpl.X.MessageStringOf(x)
+}
+
+func (*StoreHumidityReply) ProtoMessage() {}
+
+func (x *StoreHumidityReply) ProtoReflect() protoreflect.Message {
+	mi := &file_humidityStorage_proto_msgTypes[1]
+	if protoimpl.UnsafeEnabled && x != nil {
+		ms := protoimpl.X.MessageStateOf(protoimpl.Pointer(x))
+		if ms.LoadMessageInfo() == nil {
+			ms.StoreMessageInfo(mi)
+		}
+		return ms
+	}
+	return mi.MessageOf(x)
+}
+
+// Deprecated: Use StoreHumidityReply.ProtoReflect.Descriptor instead.
+func (*StoreHumidityReply) Descriptor() ([]byte, []int) {
+	return file_humidityStorage_proto_rawDescGZIP(), []int{1}
+}
+
+var File_humidityStorage_proto protoreflect.FileDescriptor
+
+var file_humidityStorage_proto_rawDesc = []byte{
+	0x0a, 0x15, 0x68, 0x75, 0x6d, 0x69, 0x64, 0x69, 0x74, 0x79, 0x53, 0x74, 0x6f, 0x72, 0x61, 0x67,
+	0x65, 0x2e, 0x70, 0x72, 0x6f, 0x74, 0x6f, 0x12, 0x0a, 0x73, 0x6d, 0x61, 0x72, 0x74, 0x5f, 0x68,
+	0x6f, 0x6d, 0x65, 0x22, 0x90, 0x01, 0x0a, 0x14, 0x53, 0x74, 0x6f, 0x72, 0x65, 0x48, 0x75, 0x6d,
+	0x69, 0x64, 0x69, 0x74, 0x79, 0x52, 0x65, 0x71, 0x75, 0x65, 0x73, 0x74, 0x12, 0x24, 0x0a, 0x0d,
+	0x72, 0x65, 0x71, 0x75, 0x65, 0x73, 0x74, 0x4e, 0x75, 0x6d, 0x62, 0x65, 0x72, 0x18, 0x01, 0x20,
+	0x01, 0x28, 0x05, 0x52, 0x0d, 0x72, 0x65, 0x71, 0x75, 0x65, 0x73, 0x74, 0x4e, 0x75, 0x6d, 0x62,
+	0x65, 0x72, 0x12, 0x1a, 0x0a, 0x08, 0x68, 0x75, 0x6d, 0x69, 0x64, 0x69, 0x74, 0x79, 0x18, 0x02,
+	0x20, 0x01, 0x28, 0x05, 0x52, 0x08, 0x68, 0x75, 0x6d, 0x69, 0x64, 0x69, 0x74, 0x79, 0x12, 0x1a,
+	0x0a, 0x08, 0x64, 0x65, 0x76, 0x69, 0x63, 0x65, 0x49, 0x64, 0x18, 0x03, 0x20, 0x01, 0x28, 0x05,
+	0x52, 0x08, 0x64, 0x65, 0x76, 0x69, 0x63, 0x65, 0x49, 0x64, 0x12, 0x1a, 0x0a, 0x08, 0x73, 0x65,
+	0x6e, 0x73, 0x6f, 0x72, 0x49, 0x64, 0x18, 0x04, 0x20, 0x01, 0x28, 0x05, 0x52, 0x08, 0x73, 0x65,
+	0x6e, 0x73, 0x6f, 0x72, 0x49, 0x64, 0x22, 0x14, 0x0a, 0x12, 0x53, 0x74, 0x6f, 0x72, 0x65, 0x48,
+	0x75, 0x6d, 0x69, 0x64, 0x69, 0x74, 0x79, 0x52, 0x65, 0x70, 0x6c, 0x79, 0x32, 0x69, 0x0a, 0x0f,
+	0x48, 0x75, 0x6d, 0x69, 0x64, 0x69, 0x74, 0x79, 0x53, 0x74, 0x6f, 0x72, 0x61, 0x67, 0x65, 0x12,
+	0x56, 0x0a, 0x12, 0x73, 0x74, 0x6f, 0x72, 0x65, 0x48, 0x75, 0x6d, 0x69, 0x64, 0x69, 0x74, 0x79,
+	0x45, 0x6e, 0x74, 0x72, 0x79, 0x12, 0x20, 0x2e, 0x73, 0x6d, 0x61, 0x72, 0x74, 0x5f, 0x68, 0x6f,
+	0x6d, 0x65, 0x2e, 0x53, 0x74, 0x6f, 0x72, 0x65, 0x48, 0x75, 0x6d, 0x69, 0x64, 0x69, 0x74, 0x79,
+	0x52, 0x65, 0x71, 0x75, 0x65, 0x73, 0x74, 0x1a, 0x1e, 0x2e, 0x73, 0x6d, 0x61, 0x72, 0x74, 0x5f,
+	0x68, 0x6f, 0x6d, 0x65, 0x2e, 0x53, 0x74, 0x6f, 0x72, 0x65, 0x48, 0x75, 0x6d, 0x69, 0x64, 0x69,
+	0x74, 0x79, 0x52, 0x65, 0x70, 0x6c, 0x79, 0x42, 0x5a, 0x0a, 0x1e, 0x63, 0x6f, 0x6d, 0x2e, 0x65,
+	0x78, 0x61, 0x6d, 0x70, 0x6c, 0x65, 0x2e, 0x72, 0x70, 0x69, 0x63, 0x6f, 0x6d, 0x6d, 0x75, 0x6e,
+	0x69, 0x63, 0x61, 0x74, 0x6f, 0x72, 0x5f, 0x76, 0x31, 0x5a, 0x38, 0x67, 0x69, 0x74, 0x68, 0x75,
+	0x62, 0x2e, 0x63, 0x6f, 0x6d, 0x2f, 0x74, 0x6f, 0x62, 0x69, 0x61, 0x73, 0x6a, 0x75, 0x6e, 0x67,
+	0x6d, 0x61, 0x6e, 0x6e, 0x2f, 0x48, 0x69, 0x6d, 0x62, 0x65, 0x65, 0x72, 0x67, 0x61, 0x72, 0x74,
+	0x65, 0x6e, 0x5f, 0x52, 0x50, 0x69, 0x2f, 0x73, 0x65, 0x72, 0x76, 0x65, 0x72, 0x2f, 0x70, 0x72,
+	0x6f, 0x74, 0x6f, 0x62, 0x06, 0x70, 0x72, 0x6f, 0x74, 0x6f, 0x33,
+}
+
+var (
+	file_humidityStorage_proto_rawDescOnce sync.Once
+	file_humidityStorage_proto_rawDescData = file_humidityStorage_proto_rawDesc
+)
+
+func file_humidityStorage_proto_rawDescGZIP() []byte {
+	file_humidityStorage_proto_rawDescOnce.Do(func() {
+		file_humidityStorage_proto_rawDescData = protoimpl.X.CompressGZIP(file_humidityStorage_proto_rawDescData)
+	})
+	return file_humidityStorage_proto_rawDescData
+}
+
+var file_humidityStorage_proto_msgTypes = make([]protoimpl.MessageInfo, 2)
+var file_humidityStorage_proto_goTypes = []interface{}{
+	(*StoreHumidityRequest)(nil), // 0: smart_home.StoreHumidityRequest
+	(*StoreHumidityReply)(nil),   // 1: smart_home.StoreHumidityReply
+}
+var file_humidityStorage_proto_depIdxs = []int32{
+	0, // 0: smart_home.HumidityStorage.storeHumidityEntry:input_type -> smart_home.StoreHumidityRequest
+	1, // 1: smart_home.HumidityStorage.storeHumidityEntry:output_type -> smart_home.StoreHumidityReply
+	1, // [1:2] is the sub-list for method output_type
+	0, // [0:1] is the sub-list for method input_type
+	0, // [0:0] is the sub-list for extension type_name
+	0, // [0:0] is the sub-list for extension extendee
+	0, // [0:0] is the sub-list for field type_name
+}
+
+func init() { file_humidityStorage_proto_init() }
+func file_humidityStorage_proto_init() {
+	if File_humidityStorage_proto != nil {
+		return
+	}
+	if !protoimpl.UnsafeEnabled {
+		file_humidityStorage_proto_msgTypes[0].Exporter = func(v interface{}, i int) interface{} {
+			switch v := v.(*StoreHumidityRequest); i {
+			case 0:
+				return &v.state
+			case 1:
+				return &v.sizeCache
+			case 2:
+				return &v.unknownFields
+			default:
+				return nil
+			}
+		}
+		file_humidityStorage_proto_msgTypes[1].Exporter = func(v interface{}, i int) interface{} {
+			switch v := v.(*StoreHumidityReply); i {
+			case 0:
+				return &v.state
+			case 1:
+				return &v.sizeCache
+			case 2:
+				return &v.unknownFields
+			default:
+				return nil
+			}
+		}
+	}
+	type x struct{}
+	out := protoimpl.TypeBuilder{
+		File: protoimpl.DescBuilder{
+			GoPackagePath: reflect.TypeOf(x{}).PkgPath(),
+			RawDescriptor: file_humidityStorage_proto_rawDesc,
+			NumEnums:      0,
+			NumMessages:   2,
+			NumExtensions: 0,
+			NumServices:   1,
+		},
+		GoTypes:           file_humidityStorage_proto_goTypes,
+		DependencyIndexes: file_humidityStorage_proto_depIdxs,
+		MessageInfos:      file_humidityStorage_proto_msgTypes,
+	}.Build()
+	File_humidityStorage_proto = out.File
+	file_humidityStorage_proto_rawDesc = nil
+	file_humidityStorage_proto_goTypes = nil
+	file_humidityStorage_proto_depIdxs = nil
+}
